# microlution

./: .gitignore  README.md  qemu.md
CAD-Designs/: MicroSlide v6 (Fusion360).f3z
custom-stl-parts/: condensersolid.stl  microscope_stand_jw_v2.stl  openflexure_body_modified.stl
custom-stl-parts/MicroSlide/: MicroSlide_Platformbracket.stl  MicroSlide_follower_sample holder.stl  MicroSlide_follower_screw_connection.stl  MicroSlide_follower_stabilizer.stl
display-pico/: Cargo.toml  flake.nix  rust-toolchain.toml
display-pico/src/: main.rs
display-rpi/: Cargo.toml  flake.nix
display-rpi/src/: lib.rs  main.rs  ui.rs
display-rpi/src/display/: ili9341.rs  mod.rs
docs/: 3d_druck.md  einkauf.md  gpio-pinout.md  probenwechsler.md
elixir_sanga/: .gitignore  README.md  mix.exs
elixir_sanga/lib/sanga/: board.ex
elixir_sanga/scripts/: test_board.exs  test_safe_board.exs
encoder-display/: test.py
esp32-cam-minimap/: esp32_cam_minimap.ino
microscope-phx-server/: README.md
microscope-phx-server/elixir_sanga/: README.md
microscope-phx-server/elixir_sanga/lib/sanga/: board.ex
microscope-phx-server/elixir_sanga/scripts/: test_board.exs
microscope-phx-server/server/: .gitignore  autofocus_py.py  mix.exs  package-lock.json  package.json  server.sqlite3  server.sqlite3-shm  server.sqlite3-wal
microscope-phx-server/server/assets/: tailwind.config.js
microscope-phx-server/server/assets/css/: app.css  config.css  (+1 more)
microscope-phx-server/server/config/: config.exs  dev.exs  test.exs
microscope-phx-server/server/lib/: server_web.ex
microscope-phx-server/server/scripts/: test_board.exs  test_safe_board.exs
scope-ui/: Cargo.toml  Dockerfile  flake.nix
scope-ui-v2/: Cargo.toml  flake.nix
scope-ui-v2/src/: client.rs  lib.rs  main.rs
scope-ui-v2/src/display/: graphics_core.rs  ili9341.rs  mod.rs
scope-ui-v2/src/input/: mod.rs  rotary_encoder.rs
scope-ui/mock-server/: Cargo.toml
scope-ui/mock-server/src/: main.rs
scope-ui/scripts/: deploy.sh
scope-ui/src/: client.rs  lib.rs  main.rs  ui.rs
scope-ui/src/display/: graphics_core.rs  ili9341.rs  mod.rs  simulated.rs
scope-ui/src/input/: mod.rs  rotary_encoder.rs
scope-ui/src/menu/: mod.rs  position.rs  shared.rs
stitching/: .gitignore  rename_01.py  rename_02.py  stitch2d.py  stitch2d_structured_mosaic.py  stitch_server.py  stitching.py  stitching_like-stitch2d.py  stitching_like_stitch2d.py  stitching_orb.py  stitching_sift.py  stitching_transparent_overlap.py  tearing.py
stitching/start/: stitching_orb.py  stitching_phase.py
stitching/stitch2d/: stitch2d_mosaic.py  stitch2d_structured_mosaic.py
weekly/: weekly-template.md  weekly01.md
(+53 files in other folders)
