[package]
name = "scope-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
rppal = { version = "0.22.1", features = ["hal"] }
tinybmp = "0.6.0"
byte-slice-cast = "1.2.3"
embedded-menu = "0.6.1"
embedded-layout = "0.4.2"
log = "0.4.27"
env_logger = "0.11.8"
rotary-encoder-embedded = "0.4.0"
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1.0.98"
url = "2.5.4"
serde_json = "1.0.140"

